--- a/web/package.json
+++ b/web/package.json
@@ -18,15 +18,19 @@
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
+    "cache-loader": "^4.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "graceful-fs": "^4.2.11",
+    "loader-runner": "^4.3.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.9.2",
+    "webpack": "^5.91.0"
   },
   "eslintConfig": {
     "root": true,
